--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -333,18 +333,18 @@
   PBNews.86.a:0 "France marches closer to Germany"
 
   PBNews.87.t:0 "FRANCE DECLARES WAR ON GERMANY"
-  PBNews.87.d:0 ""  
-  PBNews.87.a:0 "The World Stands Still In Anticipation"
+  PBNews.87.d:0 "War has broken out in Europe, as the French military has launched a full-scale invasion of Germany. The government officially declared war just minutes after the first military engagement, claiming that the United Kingdoms of Germany were poised to invade and that the invasion was little more than a preemptive strike. The German government has denounced these claims, vowing to fight to the last man against the French. Some foreign analysts believe that this conflict will soon spiral across the whole continent, but only time will tell if this is the case."  
+  PBNews.87.a:0 "The fires of war burn once more"
 
   PBNews.88.t:0 "GERMANY JOINS BRITAIN!"
   PBNews.88.d:0 ""  
   PBNews.88.a:0 "An Alliance Out Of Necessity?"
 
-  PBNews.89.t:0 "TASMANIAN TIGET: EXTINCT!"
+  PBNews.89.t:0 "TASMANIAN TIGER: EXTINCT!"
   PBNews.89.d:0 ""  
   PBNews.89.a:0 "Such A Shame"
 
-  PBNews.90.t:0 "MOUNT EVEREST CONQUERED BY GEORGE MALLORY"
+  PBNews.90.t:0 "MOUNT EVEREST CONQUERED"
   PBNews.90.d:0 ""  
   PBNews.90.a:0 "An Achievement For All Mankind"
 
@@ -424,6 +424,21 @@
   PBNews.109.d:0 ""
   PBNews.109.a:0 "Never Would I Have Thought"
 
+  PBNews.110.t:0 "MEXICO INVADES RIO GRANDE"
+  PBNews.110.d:0 ""
+  PBNews.110.a:0 "The Empire Expands"
+
+  PBNews.111.t:0 "MEXICAN COALITION FORMS"
+  PBNews.111.d:0 ""
+  PBNews.111.a:0 "They Are Getting Desperate"
+
+  PBNews.112.t:0 "MEXICAN BEATS COALITION"
+  PBNews.112.d:0 ""
+  PBNews.112.a:0 "An Empire Restored?"
+
+  PBNews.113.t:0 "COALITION BEATS MEXICO"
+  PBNews.113.d:0 ""
+  PBNews.113.a:0 "An Empire Defeated"
 
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
