my god this was a pain in the ass

--- a/localisation/PB_Parties_l_english.yml
+++ b/localisation/PB_Parties_l_english.yml
@@ -137,7 +137,7 @@
  JC_VARIANT_03:0 "§YRevolutionary Imperialism§!"
  JC_VARIANT_03_desc:0 "WIP"
 
- JC_VARIANT_05:0 "§YClassical Jacobinis§!"
+ JC_VARIANT_05:0 "§YClassical Jacobinism§!"
  JC_VARIANT_05_desc:0 "§YClassical Jacobinism§! is an offshoot of traditional Jacobin thought that rejects the vanguardism and political tutelage of more conventional Jacobinism. Classical Jacobinism advocates for the idea of \"Revolutionary Democracy\", under which the majority of power is decentralized among the population and executive power is kept controlled via checks and balances. Though denounced by conventional Jacobins for the rejection of the vanguard, Classical Jacobins remain a prominent offshoot of Revolutionary Republican thought."
 
  JC_VARIANT_06:0 "§YKingoro Hashimoto Thought§!"
