--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -108,6 +108,10 @@
   RUS_kirill_animals_in_auxiliary_roles:0 "Animals in Auxiliary Roles"
   RUS_kirill_animals_in_combat_roles:0 "Animals in Combat Roles"
   RUS_kirill_project_chelovek_zver_finalised:0 "Project: Chelovek-Zver Finalised"
+  RUS_kirill_the_genetic_horror:0 "The Genetic Horror"
+  RUS_kirill_the_genetic_horror_desc:0 "§RThese are the things of man's folly§!"
+  RUS_kirill_the_greatest_slav:0 "The Greatest Slav"
+  RUS_kirill_new_slav_modifier:0 "The §ONew Slav§!"
   ##########################
   # EVENTS
   ##########################
@@ -277,6 +281,25 @@
   RUS_kirill.9.t:0 "Lysenko's Magnum Opus"
   RUS_kirill.9.d:0 ""
   RUS_kirill.9.a:0 "Let the New Slav Project begin"
+  RUS_kirill.10.t:0 "OPERATION BLACK HEART"
+  RUS_kirill.10.d:0 ""
+  RUS_kirill.10.a:0 "What will become of this?"
+  RUS_kirill.11.t:0 "The Genetic Horror"
+  RUS_kirill.11.d:0 ""
+  RUS_kirill.11.a:0 "A Horror to be used"
+  RUS_kirill.11.b:0 "By the light of God kill it"
+  RUS_kirill.12.t:0 "The Greatest Slav"
+  RUS_kirill.12.d:0 ""
+  RUS_kirill.12.a:0 "But why is it called Black Heart?"
+  RUS_kirill.13.t:0 "THE RESULTS"
+  RUS_kirill.13.d:0 ""
+  RUS_kirill.13.a:0 "How will things turn out?"
+  RUS_kirill.14.t:0 "PROJECT FAILURE"
+  RUS_kirill.14.d:0 ""
+  RUS_kirill.14.a:0 "All this work for NOTHING?!"
+  RUS_kirill.15.t:0 "PROJECT SUCCESS"
+  RUS_kirill.15.d:0 ""
+  RUS_kirill.15.a:0 "At long last"
   ##########################
   # GUI DESCRIPTIONS
   ##########################
@@ -616,13 +639,18 @@
   PB_RUS_kirill_the_hidden_enemy_makes_moves:0 "The Hidden Enemy Spreads"
 
   PB_RUS_kirill_special_project_novyy_slavyanin:0 "§YSpecial Project:§! Novyy Slavyanin 1721"
-  PB_RUS_kirill_special_project_novyy_slavyanin_desc:0 "\n\n\n\n\n\n\naaaaa[PB_RUS_kirill_logistics_info_loc][PB_RUS_kirill_test_subjects_loc][PB_RUS_kirill_laboratories_loc][PB_RUS_kirill_new_slav_stats_loc][PB_RUS_kirill_new_slav_number_stats_loc]"
+  PB_RUS_kirill_special_project_novyy_slavyanin_desc:0 "\n\n\n\n\n\n\naaaaa[PB_RUS_kirill_logistics_info_loc][PB_RUS_kirill_test_subjects_loc][PB_RUS_kirill_laboratories_loc][PB_RUS_kirill_new_slav_stats_loc][PB_RUS_kirill_new_slav_number_stats_loc][PB_RUS_kirill_new_slav_sanity_loc]"
   PB_RUS_kirill_management_phases:0 "Project Management: Phases"
   PB_RUS_kirill_commence_phase_one:0 "Commence Phase One"
   PB_RUS_kirill_commence_phase_two:0 "Commence Phase Two"
   PB_RUS_kirill_commence_phase_three:0 "Commence Phase Three"
   PB_RUS_kirill_emergency_test_subject_gathering:0 "Emergency Test Subject Gathering"
   PB_RUS_kirill_end_the_special_project:0 "End the Special Project"
+
+  PB_RUS_kirill_management_black_heart:0 "Project Management: BLACK HEART"
+  PB_RUS_kirill_commence_the_operation:0 "Commence the Operation"
+  PB_RUS_kirill_silence:0 "Silence"
+  PB_RUS_kirill_silence_desc:0 "§RLysenko's lab is silent§!"
 
   PB_RUS_kirill_management_subject:0 "Project Management: Subject Gathering"
   PB_RUS_kirill_gather_the_willing:0 "Gather the Willing"
@@ -632,6 +660,28 @@
 
   PB_RUS_kirill_management_laboratories:0 "Project Management: Laboratory Building"
   PB_RUS_kirill_construct_laboratories:0 "Construct Laboratories"
+
+  PB_RUS_kirill_management_genetic_engineering:0 "Project Management: Genetic Engineering"
+  PB_RUS_kirill_more_then_25_subjects:0 "25 Test Subjects"
+  PB_RUS_kirill_more_then_25_subjects_blocked:0 "25 Test Subjects"
+  PB_RUS_kirill_more_then_50_subjects:0 "50 Test Subjects"
+  PB_RUS_kirill_more_then_50_subjects_blocked:0 "50 Test Subjects"
+  PB_RUS_kirill_more_then_100_subjects:0 "100 Test Subjects"
+  PB_RUS_kirill_more_then_100_subjects_blocked:0 "100 Test Subjects"
+  #NEW EXPERIMENTS
+  PB_RUS_kirill_experiment_on_strength:0 "Experiment on Strength"
+  PB_RUS_kirill_experiment_on_speed:0 "Experiment on Speed"
+  PB_RUS_kirill_experiment_on_defence:0 "Experiment on Defence"
+  PB_RUS_kirill_experiment_on_adaptability:0 "Experiment on Adaptability"
+  #GENE SPLICING
+  PB_RUS_kirill_splice_in_the_proud_bear:0 "Splice in the Proud Bear"
+  PB_RUS_kirill_splice_in_the_fast_deer:0 "Splice in the Fast Deer"
+  PB_RUS_kirill_splice_in_the_invincible_boar:0 "Splice in the Invincible Boar"
+  PB_RUS_kirill_splice_in_the_sly_wolf:0 "Splice in the Sly Wolf"
+  #MISC
+  PB_RUS_kirill_brutes_over_spies:0 "Brutes Over Spies"
+  PB_RUS_kirill_spies_over_brutes:0 "Spies Over Brutes"
+  PB_RUS_improve_sanity:0 "Improve the New Slav's Sanity"
 
   PB_RUS_kirill_management_research:0 "Project Management: Research"
   PB_RUS_kirill_subject_gathering_techniques:0 "Subject Gathering Techniques"
@@ -643,6 +693,15 @@
   PB_RUS_kirill_understanding_the_new_slavs_body:0 "Understanding the New Slav's Body"
   PB_RUS_kirill_research_new_experiments:0 "Research New Experiments"
   PB_RUS_kirill_research_gene_splicing:0 "Research Gene Splicing"
+  PB_RUS_kirill_make_the_new_slav_faster:0 "Foucs on Making Make the New Slav Faster"
+  PB_RUS_kirill_make_the_new_slav_stronger:0 "Foucs on Making the New Slav Stronger"
+  PB_RUS_kirill_push_the_statistical_freshold:0 "Push the Statistical Threshold"
+  #PHASE 3
+  PB_RUS_kirill_ignore_sanity:0 "Ignore Their Sanity"
+  PB_RUS_kirill_sanity_preservation_techniques:0 "Sanity Preservation Techniques"
+  PB_RUS_kirill_better_understanding_the_new_slavs_sanity:0 "Better Understanding the New Slav's Sanity"
+  PB_RUS_kirill_go_even_further:0 "Go Even Furhter"
+  PB_RUS_kirill_stop_the_project:0 "Stop the Project"
 
 
   
@@ -759,7 +818,6 @@
   PB_RUS_kirill_long_term_subject_planning_tt:0 "In future phases we will be given the chance to find some last minute Test Subjects"
   PB_RUS_kirill_enhanced_gathering_procedures_tt:0 "Test Subject gathering decisions will have greater yields"
   PB_RUS_kirill_create_the_ideal_laboratory_tt:0 "We will gain the ability to construct Laboratories"
-  PB_RUS_kirill_laboratory_breach_procedures_tt:0 "In the event of a Containment Breach Laboratories will have a higher chance of surviving them"
   PB_RUS_kirill_not_gathering_subects:0 "We are §Rnot§! already gathering Test Subjects"
   PB_RUS_kirill_genetic_mutation_tt:0 "§RThere is an increased risk of Genetic Mutation§!"
   PB_RUS_kirill_subject_checker:0 "We have less then or equal to §Y[?PB_RUS_kirill_test_subjects_max]§! Test Subjects"
@@ -767,8 +825,20 @@
   PB_RUS_kirill_construct_laboratories_tt:0 "Five Hundred new Test Subjects will be able to be recruited"
   PB_RUS_kirill_understanding_the_new_slavs_body_tt:0 "The 'Stats' of the New Slav will now be displayed in the Decision Menu, §Gnew research will be unlocked§!"
   PB_RUS_kirill_research_new_experiments_tt:0 "Experiments will become avaliable in order to increase the power of the New Slav, this proccess is slow and can lead to possible failure\n\n§RThis cannot be researched alongside§! §YGene Splicing§!"
-  PB_RUS_kirill_research_gene_splicing_tt:0 "We will begin inserting animal genes into the New Slav's Genome, this can lead to insanity\n\n§RThis cannot be researched alongside§! §YNew Experiments§!"
-
+  PB_RUS_kirill_research_gene_splicing_tt:0 "We will begin inserting animal genes into the New Slav's Genome, this can lead to insanity in the §ONew Slav§!\n\n§RThis cannot be researched alongside§! §YNew Experiments§!"
+  PB_RUS_kirill_make_the_new_slav_faster_tt:0 "Decisions will be unlocked that will make the §ONew Slav§! faster, making them too fast will lead to future problems\n\n§RThis cannot be researched alongside§! §YMake them Stronger§!"
+  PB_RUS_kirill_make_the_new_slav_stronger_tt:0 "Decisions will be unlocked that will make the §ONew Slav§! stronger, making them too strong will lead to future problems\n\n§RThis cannot be researched alongside§! §YMake them Faster§!"
+  PB_RUS_kirill_ignore_sanity_tt:0 "We will skip the sanity checks for the §ONew Slav§!, this will guarantee a negative stability modifier but a positive war support modifier\n\n§Rwe cannot research this and§! §YSanity preservation techniques§!"
+  PB_RUS_kirill_push_the_statistical_freshold_tt:0 "We will be able to make the §ONew Slav§! better on all fronts by an extra §Y10%§!, §Rpushing too far will increase the risk of failure§!"
+  PB_RUS_kirill_sanity_preservation_techniques_tt:0 "New decisions that require Test Subjects will appear to increase the §ONew Slav's§! sanity which will increase stability but decrease war support\n\n§Rwe cannot research this and§! §YIgnore Their Sanity§!"
+  PB_RUS_kirill_better_understanding_the_new_slavs_sanity_tt:0 "A new Stat will appear on the Descsion menu"
+  PB_RUS_kirill_emergency_test_subject_gathering_tt:0 "§YWe can only use this five times§!"
+  PB_RUS_kirill_not_improving_stats:0 "We are not already improve the §ONew Slav's§! Stats"
+  PB_RUS_kirill_go_even_further_tt2:0 "A final decision will appear that will improve the §ONew Slav§! even further, this could end in disaster\n\n§Rwe cannot research this and§! §YStop the Project§!"
+  PB_RUS_kirill_stop_the_project_tt:0 "The §ONew Slav§! will not be pushed further\n\n§Rwe cannot research this and§! §YGo Even Further§!"
+  PB_RUS_kirill_variable_pain_tt:0 "Depending on multiple factors the outcome will become clear"
+  PB_RUS_kirill_commence_the_operation_tt:0 "All other Decisions will be stopped\n\n§RThere is no turning back from here§!"
+  PB_RUS_kirill_operation_black_heart_tt:0 "Depending on multiple factors the outcome will become clear"
   PB_RUS_kirill_test_subjects_plus10_tt:0 "§YTen Test Subjects§! will be §Gadded§! to the Experiment"
   PB_RUS_kirill_test_subjects_plus25_tt:0 "§YTwenty Five Test Subjects§! will be §Gadded§! to the Experiment"
   PB_RUS_kirill_test_subjects_plus50_tt:0 "§YFifty Test Subjects§! will be §Gadded§! to the Experiment"
@@ -776,45 +846,43 @@
   PB_RUS_kirill_test_subjects_plus100_tt:0 "§YOne Hundred Test Subjects§! will be §Gadded§! to the Experiment"
   PB_RUS_kirill_test_subjects_plus200_tt:0 "§YTwo Hundred Test Subjects§! will be §Gadded§! to the Experiment"
   PB_RUS_kirill_test_subjects_plus500_tt:0 "§YFive Hundred Test Subjects§! will be §Gadded§! to the Experiment"
-  PB_RUS_kirill_test_subjects_minus10_tt:0 "§YTen Test Subjects§! will be §Rdecreased§! to the Experiment"
-  PB_RUS_kirill_test_subjects_minus25_tt:0 "§YTwenty Five Test Subjects§! will be §Rdecreased§! to the Experiment"
-  PB_RUS_kirill_test_subjects_minus50_tt:0 "§YFifty Test Subjects§! will be §Rdecreased§! to the Experiment"
-  PB_RUS_kirill_test_subjects_minus75_tt:0 "§YSeventy Five Test Subjects§! will be §Rdecreased§! to the Experiment"
-  PB_RUS_kirill_test_subjects_minus100_tt:0 "§YOne Hundred Test Subjects§! will be §Rdecreased§! to the Experiment"
-  PB_RUS_kirill_test_subjects_minus200_tt:0 "§YTwo Hundred Test Subjects§! will be §Rdecreased§! to the Experiment"
+  PB_RUS_kirill_test_subjects_minus10_tt:0 "§YTen Test Subjects§! will be §Rremoved§! from the Experiment"
+  PB_RUS_kirill_test_subjects_minus25_tt:0 "§YTwenty Five Test Subjects§! will be §Rremoved§! from the Experiment"
+  PB_RUS_kirill_test_subjects_minus50_tt:0 "§YFifty Test Subjects§! will be §Rremoved§! from the Experiment"
+  PB_RUS_kirill_test_subjects_minus75_tt:0 "§YSeventy Five Test Subjects§! will be §Rremoved§! from the Experiment"
+  PB_RUS_kirill_test_subjects_minus100_tt:0 "§YOne Hundred Test Subjects§! will be §Rremoved§! from the Experiment"
+  PB_RUS_kirill_test_subjects_minus200_tt:0 "§YTwo Hundred Test Subjects§! will be §Rremoved§! from the Experiment"
 
-  PB_RUS_kirill_new_slav_strength_plus0.1_tt:0 "The Strength of the §ONew Slav§! will §Gincrease§! by §Y0.1%§!"
-  PB_RUS_kirill_new_slav_strength_plus0.15_tt:0 "The Strength of the §ONew Slav§! will §Gincrease§! by §Y0.15%§!"
-  PB_RUS_kirill_new_slav_strength_plus0.2_tt:0 "The Strength of the §ONew Slav§! will §Gincrease§! by §Y0.2%§!"
-  PB_RUS_kirill_new_slav_strength_plus0.25_tt:0 "The Strength of the §ONew Slav§! will §Gincrease§! by §Y0.25%§!"
-  PB_RUS_kirill_new_slav_strength_minus0.1_tt:0 "The Strength of the §ONew Slav§! will §Ddecrease§! by §Y0.1%§!"
-  PB_RUS_kirill_new_slav_strength_minus0.15_tt:0 "The Strength of the §ONew Slav§! will §Ddecrease§! by §Y0.15%§!"
-  PB_RUS_kirill_new_slav_strength_minus0.2_tt:0 "The Strength of the §ONew Slav§! will §Ddecrease§! by §Y0.2%§!"
-  PB_RUS_kirill_new_slav_strength_minus0.25_tt:0 "The Strength of the §ONew Slav§! will §Ddecrease§! by §Y0.25%§!"
-  PB_RUS_kirill_new_slav_speed_plus0.1_tt:0 "The Speed of the §ONew Slav§! will §Gincrease§! by §Y0.1%§!"
-  PB_RUS_kirill_new_slav_speed_plus0.15_tt:0 "The Speed of the §ONew Slav§! will §Gincrease§! by §Y0.15%§!"
-  PB_RUS_kirill_new_slav_speed_plus0.2_tt:0 "The Speed of the §ONew Slav§! will §Gincrease§! by §Y0.2%§!"
-  PB_RUS_kirill_new_slav_speed_plus0.25_tt:0 "The Speed of the §ONew Slav§! will §Gincrease§! by §Y0.25%§!"
-  PB_RUS_kirill_new_slav_speed_minus0.1_tt:0 "The Speed of the §ONew Slav§! will §Ddecrease§! by §Y0.1%§!"
-  PB_RUS_kirill_new_slav_speed_minus0.15_tt:0 "The Speed of the §ONew Slav§! will §Ddecrease§! by §Y0.15%§!"
-  PB_RUS_kirill_new_slav_speed_minus0.2_tt:0 "The Speed of the §ONew Slav§! will §Ddecrease§! by §Y0.2%§!"
-  PB_RUS_kirill_new_slav_speed_minus0.25_tt:0 "The Speed of the §ONew Slav§! will §Ddecrease§! by §Y0.25%§!"
-  PB_RUS_kirill_new_slav_defence_plus0.1_tt:0 "The Defence of the §ONew Slav§! will §Gincrease§! by §Y0.1%§!"
-  PB_RUS_kirill_new_slav_defence_plus0.15_tt:0 "The Defence of the §ONew Slav§! will §Gincrease§! by §Y0.15%§!"
-  PB_RUS_kirill_new_slav_defence_plus0.2_tt:0 "The Defence of the §ONew Slav§! will §Gincrease§! by §Y0.2%§!"
-  PB_RUS_kirill_new_slav_defence_plus0.25_tt:0 "The Defence of the §ONew Slav§! will §Gincrease§! by §Y0.25%§!"
-  PB_RUS_kirill_new_slav_defence_minus0.1_tt:0 "The Defence of the §ONew Slav§! will §Ddecrease§! by §Y0.1%§!"
-  PB_RUS_kirill_new_slav_defence_minus0.15_tt:0 "The Defence of the §ONew Slav§! will §Ddecrease§! by §Y0.15%§!"
-  PB_RUS_kirill_new_slav_defence_minus0.2_tt:0 "The Defence of the §ONew Slav§! will §Ddecrease§! by §Y0.2%§!"
-  PB_RUS_kirill_new_slav_defence_minus0.25_tt:0 "The Defence of the §ONew Slav§! will §Ddecrease§! by §Y0.25%§!"
-  PB_RUS_kirill_new_slav_adaptability_plus0.1_tt:0 "The Adaptability of the §ONew Slav§! will §Gincrease§! by §Y0.1%§!"
-  PB_RUS_kirill_new_slav_adaptability_plus0.15_tt:0 "The Adaptability of the §ONew Slav§! will §Gincrease§! by §Y0.15%§!"
-  PB_RUS_kirill_new_slav_adaptability_plus0.2_tt:0 "The Adaptability of the §ONew Slav§! will §Gincrease§! by §Y0.2%§!"
-  PB_RUS_kirill_new_slav_adaptability_plus0.25_tt:0 "The Adaptability of the §ONew Slav§! will §Gincrease§! by §Y0.25%§!"
-  PB_RUS_kirill_new_slav_adaptability_minus0.1_tt:0 "The Adaptability of the §ONew Slav§! will §Ddecrease§! by §Y0.1%§!"
-  PB_RUS_kirill_new_slav_adaptability_minus0.15_tt:0 "The Adaptability of the §ONew Slav§! will §Ddecrease§! by §Y0.15%§!"
-  PB_RUS_kirill_new_slav_adaptability_minus0.2_tt:0 "The Adaptability of the §ONew Slav§! will §Ddecrease§! by §Y0.2%§!"
-  PB_RUS_kirill_new_slav_adaptability_minus0.25_tt:0 "The Adaptability of the §ONew Slav§! will §Ddecrease§! by §Y0.25%§!"
+  PB_RUS_kirill_new_slav_strength_plus0.05_tt:0 "The Strength of the §ONew Slav§! will §Gincrease§! by §Y5%§!"
+  PB_RUS_kirill_new_slav_strength_plus0.1_tt:0 "The Strength of the §ONew Slav§! will §Gincrease§! by §Y10%§!"
+  PB_RUS_kirill_new_slav_strength_plus0.15_tt:0 "The Strength of the §ONew Slav§! will §Gincrease§! by §Y15%§!"
+  PB_RUS_kirill_new_slav_strength_minus0.05_tt:0 "The Strength of the §ONew Slav§! will §Rdecrease§! by §Y5%§!"
+  PB_RUS_kirill_new_slav_strength_minus0.1_tt:0 "The Strength of the §ONew Slav§! will §Rdecrease§! by §Y10%§!"
+  PB_RUS_kirill_new_slav_strength_minus0.15_tt:0 "The Strength of the §ONew Slav§! will §Rdecrease§! by §Y15%§!"
+  PB_RUS_kirill_new_slav_speed_plus0.05_tt:0 "The Speed of the §ONew Slav§! will §Gincrease§! by §Y5%§!"
+  PB_RUS_kirill_new_slav_speed_plus0.1_tt:0 "The Speed of the §ONew Slav§! will §Gincrease§! by §Y10%§!"
+  PB_RUS_kirill_new_slav_speed_plus0.15_tt:0 "The Speed of the §ONew Slav§! will §Gincrease§! by §Y15%§!"
+  PB_RUS_kirill_new_slav_speed_minus0.05_tt:0 "The Speed of the §ONew Slav§! will §Rdecrease§! by §Y5%§!"
+  PB_RUS_kirill_new_slav_speed_minus0.1_tt:0 "The Speed of the §ONew Slav§! will §Rdecrease§! by §Y10%§!"
+  PB_RUS_kirill_new_slav_speed_minus0.15_tt:0 "The Speed of the §ONew Slav§! will §Rdecrease§! by §Y15%§!"
+  PB_RUS_kirill_new_slav_defence_plus0.05_tt:0 "The Defence of the §ONew Slav§! will §Gincrease§! by §Y5%§!"
+  PB_RUS_kirill_new_slav_defence_plus0.1_tt:0 "The Defence of the §ONew Slav§! will §Gincrease§! by §Y10%§!"
+  PB_RUS_kirill_new_slav_defence_plus0.15_tt:0 "The Defence of the §ONew Slav§! will §Gincrease§! by §Y15%§!"
+  PB_RUS_kirill_new_slav_defence_minus0.05_tt:0 "The Defence of the §ONew Slav§! will §Rdecrease§! by §Y5%§!"
+  PB_RUS_kirill_new_slav_defence_minus0.1_tt:0 "The Defence of the §ONew Slav§! will §Rdecrease§! by §Y10%§!"
+  PB_RUS_kirill_new_slav_defence_minus0.15_tt:0 "The Defence of the §ONew Slav§! will §Rdecrease§! by §Y15%§!"
+  PB_RUS_kirill_new_slav_adaptability_plus0.05_tt:0 "The Adaptability of the §ONew Slav§! will §Gincrease§! by §Y5%§!"
+  PB_RUS_kirill_new_slav_adaptability_plus0.1_tt:0 "The Adaptability of the §ONew Slav§! will §Gincrease§! by §Y10%§!"
+  PB_RUS_kirill_new_slav_adaptability_plus0.15_tt:0 "The Adaptability of the §ONew Slav§! will §Gincrease§! by §Y15%§!"
+  PB_RUS_kirill_new_slav_adaptability_minus0.05_tt:0 "The Adaptability of the §ONew Slav§! will §Rdecrease§! by §Y5%§!"
+  PB_RUS_kirill_new_slav_adaptability_minus0.1_tt:0 "The Adaptability of the §ONew Slav§! will §Rdecrease§! by §Y10%§!"
+  PB_RUS_kirill_new_slav_adaptability_minus0.15_tt:0 "The Adaptability of the §ONew Slav§! will §Rdecrease§! by §Y15%§!"
+  PB_RUS_kirill_new_slav_sanity_plus0.05_tt:0 "The Sanity of the §ONew Slav§! will §Gincrease§! by §Y5%§!"
+  PB_RUS_kirill_new_slav_sanity_plus0.1_tt:0 "The Sanity of the §ONew Slav§! will §Gincrease§! by §Y10%§!"
+  PB_RUS_kirill_new_slav_sanity_plus0.15_tt:0 "The Sanity of the §ONew Slav§! will §Gincrease§! by §Y15%§!"
+  PB_RUS_kirill_new_slav_sanity_minus0.05_tt:0 "The Sanity of the §ONew Slav§! will §Rdecrease§! by §Y5%§!"
+  PB_RUS_kirill_new_slav_sanity_minus0.1_tt:0 "The Sanity of the §ONew Slav§! will §Rdecrease§! by §Y10%§!"
+  PB_RUS_kirill_new_slav_sanity_minus0.15_tt:0 "The Sanity of the §ONew Slav§! will §Rdecrease§! by §Y15%§!"
 
 
 
@@ -868,7 +936,8 @@
   PB_RUS_kirill_test_subjects_loc_yes:0 "\n§LTest Subjects:§! §G[?PB_RUS_kirill_test_subjects]§! out of a maximum §R[?PB_RUS_kirill_test_subjects_max]§!"
   PB_RUS_kirill_laboratories_loc_yes:0 "\nWe have §G[?PB_RUS_kirill_laboratories]§! §LLaboratories§!"
   PB_RUS_kirill_new_slav_stats_loc_yes:0 "\n\n§gUnderstanding the New Slav:§!"
-  PB_RUS_kirill_new_slav_number_stats_loc_yes:0 "\nStrength: [?PB_RUS_kirill_new_slav_strength]\nDefence: [?PB_RUS_kirill_new_slav_defence]\pSpeed: [?PB_RUS_kirill_new_slav_speed]\nAdaptability: [?PB_RUS_kirill_new_slav_adaptability]"
+  PB_RUS_kirill_new_slav_number_stats_loc_yes:0 "\n§YStrength:§! [?PB_RUS_kirill_new_slav_strength|%0]/[?PB_RUS_kirill_new_slav_strength_threshold|%0]\n§YSpeed:§! [?PB_RUS_kirill_new_slav_speed|%0]/[?PB_RUS_kirill_new_slav_speed_threshold|%0]\n§YDefence:§! [?PB_RUS_kirill_new_slav_defence|%0]/[?PB_RUS_kirill_new_slav_defence_threshold|%0]\n§YAdaptability:§! [?PB_RUS_kirill_new_slav_adaptability|%0]/[?PB_RUS_kirill_new_slav_adaptability_threshold|%0]"
+  PB_RUS_kirill_new_slav_sanity_loc_yes:0 "\n§YSanity:§! [?PB_RUS_kirill_new_slav_sanity|%0]"
 
   
   
