--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -112,6 +112,8 @@
   RUS_kirill_the_genetic_horror_desc:0 "§RThese are the things of man's folly§!"
   RUS_kirill_the_greatest_slav:0 "The Greatest Slav"
   RUS_kirill_new_slav_modifier:0 "The §ONew Slav§!"
+  RUS_kirill_optimised_colonial_policy:0 "Optimised Colonial Policy"
+  RUS_kirill_eased_purification:0 "Eased Purification"
   ##########################
   # EVENTS
   ##########################
@@ -300,6 +302,45 @@
   RUS_kirill.15.t:0 "PROJECT SUCCESS"
   RUS_kirill.15.d:0 ""
   RUS_kirill.15.a:0 "At long last"
+  RUS_kirill.16.t:0 "The Tsar's Ambition"
+  RUS_kirill.16.d:0 ""
+  RUS_kirill.16.a:0 "Let the Great Game begin"
+  RUS_kirill.17.t:0 "The Tsar's Grand Tour"
+  RUS_kirill.17.d:0 ""
+  RUS_kirill.17.a:0 "Let's go on an Adventure!"
+  RUS_kirill.18.t:0 "Meeting the Viceroy of the South"
+  RUS_kirill.18.d:0 ""
+  RUS_kirill.18.a:0 "The South will be a Fortress"
+  RUS_kirill.18.b:0 "The South will be connected to Russia"
+  RUS_kirill.18.c:0 "The South will be our Oil Field"
+  RUS_kirill.19.t:0 "A Meeting in Riga"
+  RUS_kirill.19.d:0 ""
+  RUS_kirill.19.a:0 "Their Personnel Riches will be expanded"
+  RUS_kirill.19.b:0 "The Noble's will become masters of war indsutry"
+  RUS_kirill.19.c:0 "Your Estates will be Expanded"
+  RUS_kirill.20.t:0 "In the Winterland"
+  RUS_kirill.20.d:0 ""
+  RUS_kirill.20.a:0 "Finland will be Industrialised"
+  RUS_kirill.20.b:0 "Finland will be connected"
+  RUS_kirill.20.c:0 "The Finnish will make for fine Workers"
+  RUS_kirill.21.t:0 "The Far off Prison Colony"
+  RUS_kirill.21.d:0 ""
+  RUS_kirill.21.a:0 "The Prison Colony will be Expanded"
+  RUS_kirill.21.b:0 "The Prisoners will find us oil"
+  RUS_kirill.21.c:0 "It's time they turned into a proper colony"
+  RUS_kirill.22.t:0 "The Tsar and his King"
+  RUS_kirill.22.d:0 ""
+  RUS_kirill.22.a:0 "Poland's industry will be expanded"
+  RUS_kirill.22.b:0 "Poland's Natural resources will be exploited"
+  RUS_kirill.22.c:0 "Poland will be intergrated into Russia proper"
+  RUS_kirill.23.t:0 "Into Prussia"
+  RUS_kirill.23.d:0 ""
+  RUS_kirill.23.a:0 "Expand the Junker's Estates"
+  RUS_kirill.23.b:0 "Expand the Prussian Armed Forces"
+  RUS_kirill.23.c:0 "Hand over Memel"
+  RUS_kirill.24.t:0 "The Tsar's Orders"
+  RUS_kirill.24.d:0 ""
+  RUS_kirill.24.a:0 "Long live the Greater Empire"
   ##########################
   # GUI DESCRIPTIONS
   ##########################
@@ -607,6 +648,40 @@
   PB_RUS_kirill_go_even_further:0 "Go Even Further"
   PB_RUS_kirill_weve_gone_far_enough:0 "We've Gone Far Enough"
   PB_RUS_kirill_slav_Kind_redefined:0 "Slav-Kind Redefined"
+  PB_RUS_kirill_the_russian_sphere:0 "The Russian Sphere"
+  PB_RUS_kirill_overlooking_those_close_to_us:0 "Overlooking Those Close to Us"
+  PB_RUS_kirill_the_southern_fortress:0 "The Southern Fortress"
+  PB_RUS_kirill_talk_to_the_baltic_nobles:0 "Talk to the Baltic Nobles"
+  PB_RUS_kirill_the_problem_child:0 "The Problem Child"
+  PB_RUS_kirill_the_eastern_penal_colony:0 "The Eastern Penal Colony"
+  PB_RUS_kirill_speaking_with_the_polish_king:0 "Speaking with the Polish King"
+  PB_RUS_kirill_the_estranged_child:0 "The Estranged Child"
+  PB_RUS_kirill_appointing_new_colonial_governor:0 "Appointing a New Colonial Overseer"
+  PB_RUS_kirill_putting_aside_differences_with_governors:0 "Ease Rivalries Between Governors"
+  PB_RUS_kirill_autonomies_into_states:0 "Autonomies Into States"
+  PB_RUS_kirill_easing_on_russification:0 "Easing on Russification"
+  PB_RUS_kirill_heia_slavia:0 "Heia Slavia"
+  PB_RUS_kirill_developing_russian_east_africa:0 "Developing Russian East Africa"
+  PB_RUS_kirill_encouraging_cossack_settlement:0 "Encouraging Cossack Settlement"
+  PB_RUS_kirill_taming_african_horses:0 "Taming African Horses"
+  PB_RUS_kirill_african_environmental_training:0 "African Environmental Training"
+  PB_RUS_kirill_the_founding_new_zimoveysakaya:0 "The Founding of New Zimoveysakaya"
+  PB_RUS_kirill_making_use_native_labor:0 "Making Use of Native Labor"
+  PB_RUS_kirill_hiring_european_experts:0 "Hiring European Experts"
+  PB_RUS_kirill_creating_profitable_colony:0 "Creating a Profitable Colony"
+  PB_RUS_kirill_russias_african_success:0 "Russia's African Success"
+  PB_RUS_kirill_developing_russian_merchant_marine:0 "Developing the Russian Merchant Marine"
+  PB_RUS_kirill_east_beckons:0 "The East Beckons Us"
+  PB_RUS_kirill_sultan_of_aceh:0 "The Sultan of Aceh"
+  PB_RUS_kirill_offer_them_our_skills:0 "Offer Them Our Skills"
+  PB_RUS_kirill_enjoy_russian_luxury:0 "Enjoy Russian Luxury"
+  PB_RUS_kirill_thailand_plans:0 "Thailand Plans"
+  PB_RUS_kirill_arming_pretender:0 "Arming the Pretender"
+  PB_RUS_kirill_welcome_to_russian_sphere:0 "Welcome to the Russian Sphere"
+  PB_RUS_kirill_chinese_mayhem:0 "Chinese Mayhem"
+  PB_RUS_kirill_russian_opportunity:0 "Russian Opportunity"
+  PB_RUS_kirill_these_lands_belong_mongolia:0 "These Lands Belong to Mongolia"
+  PB_RUS_kirill_eagle_flies_east:0 "The Eagle Flies to the East"
 
   ########################## 
   # Decisions
