--- a/localisation/PB_RussianAutonomies_l_english.yml
+++ b/localisation/PB_RussianAutonomies_l_english.yml
@@ -25,6 +25,8 @@ PB_BAL_denikin_playground_3:0 "Denikin's Shackles"
 PB_BAL_denikin_playground_3_desc:0 ""
 PB_ASK_wealthy_prison_colony:0 "The Wealthy Prison Colony"
 PB_ASK_wealthy_prison_colony_desc:0 ""
+PB_ASK_growing_colony:0 "The Growing Colony"
+PB_ASK_growing_colony_desc:0 ""
 PB_TRS_growing_heresy:0 "The Growing Heresy"
 PB_TRS_growing_heresy_desc:0 ""
 PB_TRS_growing_heresy_2:0 "Heretical Crackdown"
