--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -938,7 +938,7 @@
 
   britain.40.t:0 "Anti-British Riots in Freetown"
   britain.40.d:0 "Lieutenant Colonel Lucas sat at his desk in some outpost ten miles away from Freetown. He was a man built for combat, joining the King's West African Mounted Rifles just after the Great war being too young to enlist for that conflict and still enlisting two years to serve his country in the Dark Continent.\n\nNow after nearly a decade and a half of service to his crown he ended up rising to a place he despised the most; bureacracy. The Colonel was ordered to manage the garrisons and patrol movements near Freetown- an extraordinary boring job which was slowly degrading his martial prowess through the painful years of military bureacracy.\n\nAs he was about to stretch a young soldier-no older then 18, barged into his office screaming that the 'savages have revolted.'\n\nThe old soldier quickly calmed down the boy and laughed confusing the young squadie who was desperately trying to ask for orders. Finally a worthy challenge for the ageing officer and possibly an opportunity to get out this godforsaken hell hole if he plays his cards right. The Colonel stood up and told the young soldier the motto of his regiment.\n\n'Blood, Guts and Glory'."
-  britain.40.a:0 Fetch me my rifle boy and call the riders for we have a fight at last."
+  britain.40.a:0 "Fetch me my rifle boy and call the riders for we have a fight at last."
 
   britain.41.t:0 "Anti-British Riots in Freetown"
   britain.41.d:0 ""
