--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -816,6 +816,8 @@
  PB_RUS_alexei_building_better_airfields:0 "Building Better Airfields"
  PB_RUS_alexei_building_better_airfields_desc:0 "placeholder"
  PB_RUS_alexei_project_no_9381:0 "'Project No.9381'"
+ PB_RUS_alexei_establish_pbii:0 "Establish the "People's Bureau of Interference Investigation""
+ PB_RUS_alexei_establish_pbii_desc:0 "placeholder"
  PB_RUS_alexei_project_no_9381_desc:0 "placeholder"
  PB_RUS_alexei_our_infirm_army:0 "Our Infirm Army"
  PB_RUS_alexei_our_infirm_army_desc:0 "placeholder"
@@ -1071,6 +1073,14 @@
  PB_RUS_alexei_the_end_is_nigh_desc:0 "placeholder"
  PB_RUS_alexei_turn_the_key:0 "Turn the Key"
  PB_RUS_alexei_turn_the_key_desc:0 "placeholder"
+ PB_RUS_alexei_forces_of_nature:0 "Forces of Nature"
+ PB_RUS_alexei_forces_of_nature_desc:0 "placeholder"
+ PB_RUS_alexei_hire_attaches:0 "Employ Foreign Attaché's"
+ PB_RUS_alexei_hire_attaches_desc:0 "placeholder"
+ PB_RUS_alexei_extensive_training_schemes:0 "Extensive Air Training Schemes"
+ PB_RUS_alexei_extensive_training_schemes_desc:0 "placeholder"
+ PB_RUS_alexei_conscription_reform:0 "Reform Nationwide Conscription"
+ PB_RUS_alexei_conscription_reform_desc:0 "placeholder"
   ########################## 
   # Decisions
   ##########################
