--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -59,7 +59,8 @@
   PB_GER_KDG_Supported:0 "Supported the Kongress der deutschen Gewerkschaften"
   PB_GER_Industrialists_Supported:0 "Supported the Industrialists"
   PB_GER_Royal_German_Coal_and_Steel_idea:0 "Königliches Deutsches Kohle- und Stahlprogramm"
-  PB_GER_Landship_Rapid_Development:0 "Landship Fleet Expansion"
+  PB_GER_Landship_Rapid_Development:0 "Assisting British Walker Development"
+  PB_GER_British_Nuclear_Programm:0 "The Armageddon Programm"
   PB_GER_Pan_German_Military:0 "Pan-German Military Committee"
   PB_GER_Mittleuropa_Member:0 "Member of the Mittleuropa Economic Partnership Programme"
   PB_GER_Mittleuropa_Leader:0 "Leader of Mittleuropa"
@@ -219,23 +220,29 @@
   PB_GER_Origins_War:0 "Our Roots are War"
 
   PB_GER_Develop_Economy:0 "Status of the Economy"
-  PB_GER_Balance_Currency_Value:0 "Rebalance the Thaler"
+  PB_GER_Balance_Currency_Value:0 "Long Term Investments Doctrine"
   PB_GER_Revitalize_Domestic_Industry:0 "Revitalize Domestic Industry"
-  PB_GER_Rhine_Valley_Authority:0 "Establish the Rhine Valley Authority"
-  PB_GER_European_Trade_Initiative:0 "Pan-German Economic Initiative"
-  PB_GER_Ally_with_the_KDG:0 "Alliance with the KDG"
-  PB_GER_Ally_with_Krupp:0 "Support from Krupp"
+  PB_GER_Rhine_Valley_Authority:0 "Developing the Major Cities"
+  PB_GER_European_Trade_Initiative:0 "Incentivizing Venture Capitalists"
+  PB_GER_Ally_with_the_KDG:0 "Creating a Culture of Development"
+  PB_GER_Ally_with_Krupp:0 "Providing Corporate Subsidies"
   PB_GER_Royal_German_Coal_and_Steel:0 "Königlich Deutsche Kohle und Stahl"
   PB_GER_European_Common_Market:0 "Establish a Common German Market"
   PB_GER_Develop_Domestic_Arms:0 "Develop the Domestic Arms Industry"
   PB_GER_Expand_Heidelberg_University:0 "Expand Heidelberg University"
-  PB_GER_Landship_Fleet:0 "Landship Fleet Expansion"
+  PB_GER_Landship_Fleet:0 "Assisting British Walker Development"
+  PB_GER_Synthetics_Research_Rubber:0 "German Rubber the Greatest Rubber"
+  PB_GER_Gas_Weaponary:0 "New Enhanced Gas Weaponary"
+  PB_GER_Lords_of_Death:0 "We have become Lords of Death"
   PB_GER_Franz_Joseph_Line:0 "Construct the Franz Joseph Railway"
   PB_GER_Pan_German_Military_Outreach:0 "Pan-German Military Committee"
   PB_GER_Remilitarize_the_Rhineland:0 "Re-Militarize the Rhineland"
-  PB_GER_Scientific_Management:0 "Scientific Economic Management"
+  PB_GER_Scientific_Management:0 "Advancing Industrial Research"
+  PB_GER_Investor_Country:0 "A Country of Investors"
+  PB_GER_Radio_Enigma_Department:0 "Supporting the Electronics Industry"
+  PB_GER_Werner_von_Braun:0 "Werner von Braun's Vision"
   PB_GER_Synthetics_Research:0 "Synthetic Compounds Research"
-  PB_GER_Volkswagen:0 "Establish Volkswagen"
+  PB_GER_Volkswagen:0 "The Autobahn"
   PB_GER_Establish_Mittleuropa:0 "Mittleuropa"
   PB_GER_Develop_Istria:0 "Develop the Mediterranean Coast"
   PB_GER_Rare_Minerals:0 "Expand Rare Minerals Extraction"
@@ -274,8 +281,9 @@
 
   PB_GER_Military_Focus:0 "Reform the Reichsarmee"
 
+  PB_GER_Mobile_Warfare_Doctrine:0 "Mobility is the Future"
+  
   PB_GER_Support_Reform_Group:0 "Support the Reformgruppe"
-
   PB_GER_Keitel_Deep_Defense:0 "Keitel's Deep Defense Doctrine"
   PB_GER_Keitel_Deep_Defense_Rifles:0 "Exponential Rifle Production"
   PB_GER_Keitel_Deep_Defense_Entrenchment:0 "Entrenchment Doctrine"
@@ -340,16 +348,36 @@
   PB_GER_Richthofen_Air_Doctrine_Fighters:0 "Contest the Skies"
   PB_GER_Richthofen_Air_Doctrine_More_Fighters:0 "More is Better"
   PB_GER_Richthofen_Air_Doctrine_Ace_Pilots:0 "Cult of the Red Baron"
+  PB_GER_Richthofen_Air_Doctrine_Ace_Doctrine:0 "The Ace Fighter Doctrine"
+  PB_GER_Richthofen_Air_Doctrine_Drugs:0 "Drugs for our Boys"
+  PB_GER_Richthofen_Air_Doctrine_Zeppelin_Project:0 "Reviving the Zeppelin"
+  PB_GER_Richthofen_Air_Doctrine_Great_Airbase:0 "The Airbase Fortress"
+  PB_GER_Richthofen_Air_Doctrine_Increase_Firepower:0 "Increase the Firepower"
+  PB_GER_Richthofen_Air_Doctrine_Zeppelin_Improve:0  "Improve Zeppelin Performance"
+  PB_GER_Richthofen_Air_Doctrine_Airfield_Targeting:0 "Emergency Airfield Building Commission"
+  PB_GER_Richthofen_Air_Doctrine_Accurate_Bombs:0 "Increase the Payloads"
+  PB_GER_Richthofen_Air_Doctrine_Air_Superiority:0 "In Europe German Planes Fly the Highest"
+  PB_GER_Richthofen_Air_Doctrine_Best_Planes:0 "New Ways To Break the Rules"
 
+  PB_GER_War_Of_Attrition:0 "Embracing the War of Attrition"
   PB_GER_Rundstedt_Superior_Firepower:0 "Rundstedt's Superior Firepower"
   PB_GER_Rundstedt_Superior_Firepower_Streamline_Production:0 "Streamline Artillery Production"
   PB_GER_Rundstedt_Superior_Firepower_Anti_Tank:0 "Anti-Landship Weapons"
+  PB_GER_Rundstedt_Superior_Firepower_Pin_Point:0 "Pin Point Targeting"
+  PB_GER_Rundstedt_Superior_Firepower_Mobile_Artillery:0 "Motorize the Artillery"
+  PB_GER_Worst_Gas:0 "§RThe Worst Gas on the Planet§!"
+  PB_GER_Gas_Must_Flow:0 "Improve Gas Defenses"
+  PB_GER_Refine_Trench:0 "Redefine Trench Warfare"
+  PB_GER_Drugs_Every_Soldiers:0 "§G24 Stunden Schokolade§!"
+   PB_GER_Upgrade_Infantry:0 "Improve Infantry Equipment"
 
   PB_GER_Mackensen_Trench_Doctrine:0 "Mackensen's Trench Doctrine"
   PB_GER_Mackensen_Trench_Doctrine_Forts:0 "Reactivate the Franz Joseph Line"
   PB_GER_Mackensen_Trench_Doctrine_Not_One_Step:0 "Not One Goddamned Step Back"
+  PB_GER_Mackensen_Trench_Doctrine_Decrease_Standards:0 "Decrease Draft Standards"
+  PB_GER_Mackensen_Trench_Doctrine_Forts:0 "Military Owned Construction Companies"
 
-  PB_GER_Mackensen_Trench_Doctrine_Never_Another_Paris:0 "Never Another Paris"
+  PB_GER_Mackensen_Trench_Doctrine_Never_Another_Paris:0 "§YNever Another Frankfurt!§!"
   
   PB_GER_Intelligence_Agency:0 "Expand the Evidenzbureau"
   PB_GER_Intelligence_Agency_Network_Gain:0 "Expand Informant Networks"
