--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -785,7 +785,7 @@
  PB_RUS_alexei_baltic_situation_desc:0 "placeholder"
  PB_RUS_alexei_subserviance_is_godliness:0 "Subserviance is Godliness"
  PB_RUS_alexei_subserviance_is_godliness_desc:0 "placeholder"
- PB_RUS_alexei_the_tsar_decision:0 "The Tsar's Choicer"
+ PB_RUS_alexei_the_tsar_decision:0 "The Tsar's Choice"
  PB_RUS_alexei_the_tsar_decision_desc:0 "placeholder"
  PB_RUS_alexei_nature_to_defy_it:0 "Nature, to Defy it."
  PB_RUS_alexei_nature_to_defy_it_desc:0 "placeholder"
@@ -969,7 +969,7 @@
  PB_RUS_alexei_diplomats_begin_preperations_desc:0 "placeholder"
  PB_RUS_alexei_the_great_struggle_is_upon_us:0 "The Great Struggle is Upon Us"
  PB_RUS_alexei_the_great_struggle_is_upon_us_desc:0 "placeholder"
- PB_RUS_alexei_issue_ultimatums_to_slavic_countries:0 ""
+ PB_RUS_alexei_issue_ultimatums_to_slavic_countries:0 "Issue Ultimatums to Slavic Countries"
  PB_RUS_alexei_issue_ultimatums_to_slavic_countries_desc:0 "placeholder"
  PB_RUS_alexei_the_russian_legions_march:0 "The Russian Legions are on the March"
  PB_RUS_alexei_the_russian_legions_march_desc:0 "placeholder"
