--- a/localisation/PB_state_names_l_english.yml
+++ b/localisation/PB_state_names_l_english.yml
@@ -49,7 +49,7 @@
  STATE_48:0 "Sofia"
  STATE_49:0 "Osman"
  STATE_50:0 "Württemberg"
- STATE_51:0 "Rhineland"
+ STATE_51:0 "East-Rhineland"
  STATE_52:0 "Oberbayern"
  STATE_53:0 "Niederbayern"
  STATE_54:0 "Franken"
@@ -909,3 +909,6 @@
  STATE_906:0 "Brigham"
  STATE_907:0 "West Rio Grande"
  STATE_908:0 "East Iturbides"
+ STATE_909:0 "West-Rhineland"
+ STATE_910:0 "Terneuzen"
+ STATE_911:0 "Rotterdam-Zeeland"
